# simple-storage

./: README.md  cabal.config  simple-storage.cabal
src/: Database.hs  Model.hs  ModelFields.hs  Server.hs
