name:                simple-storage
version:             0.0.0.0
synopsis:            Simple storage server for knowledge graphs.
homepage:            https://github.com/knowledge-graph/simple-storage
license:             MIT
license-file:        LICENSE
author:              Daniel Buckmaster
maintainer:          dan.buckmaster@gmail.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable simple-storage
  main-is:              Server.hs
  hs-source-dirs:       src
  build-depends:        scotty >= 0.6,
                        heroku >= 0.1.1.1, mongoDB,
                        wai, wai-extra,
                        containers, random, mtl,
                        base >= 4.6 && < 5
  ghc-options:          -Wall
  extensions:           OverloadedStrings
  default-language:     Haskell2010
