name:                simple-storage
version:             0.0.0.0
synopsis:            Simple storage server for knowledge graphs.
homepage:            https://github.com/knowledge-graph/simple-storage
license:             MIT
license-file:        LICENSE
author:              Daniel Buckmaster
maintainer:          dan.buckmaster@gmail.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable simple-storage
  main-is:              Server.hs
  hs-source-dirs:       src
  build-depends:        scotty >= 0.6,
                        wai, wai-extra,
                        network, http-types,
                        persistent, persistent-mongoDB,
                        template-haskell, persistent-template,
                        containers, random, mtl, text,
                        base >= 4.6 && < 5
  ghc-options:          -Wall
  default-extensions:   OverloadedStrings
  default-language:     Haskell2010
